@@ -1,5 +1,5 @@
 /*******************************************************************************
- * Copyright (c) 2021 Obeo.
+ * Copyright (c) 2021, 2022 Obeo.
  * This program and the accompanying materials
  * are made available under the terms of the Eclipse Public License v2.0
  * which accompanies this distribution, and is available at
@@ -20,7 +20,7 @@ export interface NewRepresentationModalProps {
 
 export interface GQLGetRepresentationDescriptionsQueryVariables {
   editingContextId: string;
-  kind: string;
+  objectId: string;
 }
 
 export interface GQLGetRepresentationDescriptionsQueryData {
@@ -32,7 +32,7 @@ export interface GQLViewer {
 }
 
 export interface GQLEditingContext {
-  representationDescriptions: GQLRepresentationDescriptionConnection;
+  representationCreationDescriptions: GQLRepresentationDescriptionConnection;
 }
 
 export interface GQLRepresentationDescriptionConnection {
